# AI-MicroBMT-ObjectDection

./: .gitignore  1. Create UDS Scores.py  2. UDS cases.py  README.md  analysis_config.py  analyze_results_singleStream_offline.py  cases_analysis.tex  convert_and_evaluate.py  generate_cases_analysis.py  newEvalResults.csv  utils.py
accelerator_AIBMT_evalution_scripts/Apple M4/runtime/: CMakeLists.txt  main.cpp
accelerator_AIBMT_evalution_scripts/DeepX M1/runtime/: CMakeLists.txt  main.cpp  objectDetection_multiCore_wait.cpp  objectDetection_singleCore.cpp
accelerator_AIBMT_evalution_scripts/Hailo-8/compiler/: compile_3.py  optimize_2.py  parse_1.py
accelerator_AIBMT_evalution_scripts/Hailo-8/runtime/: CMakeLists.txt  main.cpp
accelerator_AIBMT_evalution_scripts/Mobilint-ARIES/compiler/: compile.py  make_calib.py
accelerator_AIBMT_evalution_scripts/Mobilint-ARIES/runtime/: CMakeLists.txt  main.cpp
accelerator_AIBMT_evalution_scripts/RTX PRO 6000 Max-Q/runtime/offline/: CMakeLists.txt  main.cpp
accelerator_AIBMT_evalution_scripts/RTX PRO 6000 Max-Q/runtime/singlestream/: main.cpp
accelerator_AIBMT_evalution_scripts/Rubic Pi 3 (Qualcomm QCS6490)/PTQ/: fix_batch_size.sh  input_resolution_sweep_int8_fixedbatch.py  onnx_to_int8_onnx.py
accelerator_AIBMT_evalution_scripts/Rubic Pi 3 (Qualcomm QCS6490)/runtime/: CMakeLists.txt  main.cpp
analysis_charts/UDS metrics/: UDS_cases_results.csv  UDS_cases_winners.csv  UDS_scores_detailed_base.csv  UDS_scores_summary.csv  UDS_weight_profiles.csv
analysis_charts/singleStream_vs_offline/: mAP50_drop_heatmap_data.csv  offline_throughput_data.csv  single_stream_throughput_data.csv
yolo11 variant/: yolo11 variant offline results.csv  yolo11 variant single-stream results.csv
yolo12 variant/: yolo12 variant offline results.csv  yolo12 variant single-stream results.csv
yolov10 variant/: yolov10 variant offline results.csv  yolov10 variant single-stream results.csv
yolov5 variant/: yolov5 variant offline results.csv  yolov5 variant single-stream results.csv
yolov7 variant/: yolov7 variant offline results.csv  yolov7 variant single-stream results.csv
yolov8 variant/: yolov8 variant offline results.csv  yolov8 variant single-stream results.csv
yolov9 variant/: yolov9 variant offline results.csv  yolov9 variant single-stream results.csv
